--- a/index.html
+++ b/index.html
@@ -1,15 +1,57 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Hello World</title>
-    <link rel="icon" href="https://HexTechIT.github.io/favicon.ico" type="image/x-icon"> 
-    <link rel="shortcut icon" href="https://HexTechIT.github.io/favicon.ico" type="image/x-icon">
-  </head>
-  
-<body bgcolor=yellow>
+	<head>
+		<title> Hexadecimal Technologies </title>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	</head>
+	<body>
+		<h1> Welcome to Hex-Tech </h1>
+		<p> <hr> </p>
+		<div id="form">
+		<p style="font-size:20px;"> Our website is currently under construction. In the meantime, leave your name, E-Mail Address and a comment and we will be happy to help! </p>
+		<p style="font-size:20px;"> Or <a href="https://www.facebook.com/pg/HexTech.IT/about/?ref=page_internal"> Get a hold of us though Facebook! </a> </p>
+		<form action="/action_page.php">
+		<fieldset>
+		<h2>Send an E-mail to a tech:</h2>
 
-  <h1>Hello World</h1>
-
-  <p>This is the home page for the HexTech Webpage Project. </p>
-
-  </body>
+		<form action="mailto:cmeisner@hextech.org" method="post" enctype="text/plain">
+			Name:<br>
+			<input type="text" name="name"><br>
+			E-mail:<br>
+			<input type="text" name="mail"><br>
+			Comment:<br>
+			<input type="text" name="comment" size="45"><br><br>
+			<input type="submit" value="Send">
+			<input type="reset" value="Reset">
+		</form>
+		</fieldset
+		</div>
+		<style>
+		*{
+		
+		}
+		body {
+			background-image: url("background.png");
+			font-family: tahoma;
+			color:black;
+			
+			}
+		h1 {
+			
+			text-align: center;
+			
+			}
+		#form{
+			positon:relative;
+			margin:10px auto;
+			padding: 5px;
+			text-align: center;
+			color: white;
+			border: 2px;
+			height: 700px:
+			width: 200px;
+			background-color: grey;
+		}
+		</style>
+	</body>
 </html>
