--- a/index.html
+++ b/index.html
@@ -1,57 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 	<head>
-		<title> Hexadecimal Technologies </title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	  <title> Hexadecimal Technologies </title>
+	  <link rel="shortcut icon" href="favicon.ico" type"image/x-icon">
 	</head>
-	<body>
-		<h1> Welcome to Hex-Tech </h1>
-		<p> <hr> </p>
-		<div id="form">
-		<p style="font-size:20px;"> Our website is currently under construction. In the meantime, leave your name, E-Mail Address and a comment and we will be happy to help! </p>
-		<p style="font-size:20px;"> Or <a href="https://www.facebook.com/pg/HexTech.IT/about/?ref=page_internal"> Get a hold of us though Facebook! </a> </p>
-		<form action="/action_page.php">
-		<fieldset>
-		<h2>Send an E-mail to a tech:</h2>
 
-		<form action="mailto:cmeisner@hextech.org" method="post" enctype="text/plain">
-			Name:<br>
-			<input type="text" name="name"><br>
-			E-mail:<br>
-			<input type="text" name="mail"><br>
-			Comment:<br>
-			<input type="text" name="comment" size="45"><br><br>
-			<input type="submit" value="Send">
-			<input type="reset" value="Reset">
-		</form>
-		</fieldset
-		</div>
-		<style>
-		*{
+	<body>
+	  <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FHexTech.IT%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" align="right" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+	  
+
+	  <h1> <br> <img src="logo.png" height="100" width="100"> Hexadecimal Technologies <br> <br> </h1>
+	  
+	  <img src="gif.gif"/>
+	  
+	  <p> Welcome to Hex-Tech.org, at Hex-Tech we specialize in computer maintenance and repair, Remote systems management, computer consulting and residential + business consulting <br> Our website is currently under construction. Thank you for your patience. <br> If you would like to get in touch with a tech, please contact us at cmeisner@hextech.org, or message us on facebook, twitter (@hextech_it), or get a hold of us at any time by calling 1(506)651-0090!</p>
+	  
+	  
+	<style>
 		
+	body{
+	        font-family:tahoma;
+	        background-image: url("index17.png");
+		color: white; 
+	       }
+	h1{
+		background-image: url(".png");
+		text-align:left;
+		text-shadow: 5px 2px 4px grey;
 		}
-		body {
-			background-image: url("background.png");
-			font-family: tahoma;
-			color:black;
-			
-			}
-		h1 {
-			
-			text-align: center;
-			
-			}
-		#form{
-			positon:relative;
-			margin:10px auto;
-			padding: 5px;
-			text-align: center;
-			color: white;
-			border: 2px;
-			height: 700px:
-			width: 200px;
-			background-color: grey;
+	p{
+		text-align: left;
+		font-size:20px;
+		height: 175px; width:700px;
+		display: inline table;
+		vertical-align:left;
+		color:white;
+		font-family: helvetica;
+		font-weight:bold;
+				
 		}
-		</style>
+	
+	
+	</style>
+
 	</body>
 </html>
