--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		height: 175px; width:700px;
 		display: inline table;
 		vertical-align:left;
-		color:white;
+		color:black;
 		font-family: helvetica;
 		font-weight:bold;
 				
