--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	  
 	  <img src="gif.gif"/>
 	  
-	  <p> Welcome to Hex-Tech.org, at Hex-Tech we specialize in computer maintenance and repair, Remote systems management, computer consulting and residential + business consulting <br> Our website is currently under construction. Thank you for your patience. <br> If you would like to get in touch with a tech, please contact us at cmeisner@hextech.org, or message us on facebook, twitter (@hextech_it), or get a hold of us at any time by calling 1(506)651-0090!</p>
+	  <p> Welcome to Hex-Tech.org, at Hex-Tech we specialize in computer maintenance and repair, Remote systems management, computer consulting and residential + business consulting <br> Our website is currently under construction. Thank you for your patience.</p>
 	  
 	  
 	<style>
